# uvdar_core

./: .gitignore  .gitman.yml  .gitmodules  CMakeLists.txt  README.md  config_tim_script.sh  nodelets.xml  package.xml  plugins.xml  star_01.txt  uvdar_install.sh
.ci/: ci_before_install.sh  install.sh
config/: BlinkingSequence-11-6-3-2-8.txt  L4.txt  TBS-L12-P0.500000-HD3-NO3-NZ3-N12.txt  TBS-L12-P0.500000-HD3-NO5-NZ5-eta0.000000-N20.txt  load_trajectory.py  raspi_cam_config.yaml  selected.txt  swarm_tf_connector.yaml
include/: ami  bp_tim.h
install/: config_tim_script.sh  install.sh  install_on_real_UAV.sh  test_leds.sh
launch/: back_camera.launch  basler_test.launch  baslertest.launch  beacon_test.launch  beacon_test_rviz.launch  beacon_test_rw.launch  bluefox_basic.launch  bluefox_only.launch  boids_reporter.launch  boids_reporter_simulation.launch  cam_only_basler.launch  camera_only.launch  camera_only_three_sided.launch  camera_only_three_sided_basler.launch  camera_only_two_sided.launch  demo_uvdar_core.launch  demo_uvdar_kalman.launch  double_bluefox.launch  follow_single.launch  follow_with_decoy.launch  frequency_setter.launch  generate_masks.launch  helloW.launch  just_blink.launch  just_blink_2.launch  just_output.launch  led_manager.launch  load_videos.launch  multi_frequency_test.launch  multi_frequency_test_new.launch  multi_frequency_test_rviz.launch  multimodal_hypothesis_rviz.launch  new_signaling.launch  new_uvdar_rx.launch  record_cailbration.launch  record_calibration.launch  record_dataset.launch  reprocess.launch  reprocess_all.launch  reprocess_all_single.launch  (+62 more)
math/: 2phpe.nb  2pqpe.nb  3pqpe.nb
msg/: AMIAllSequences.msg  AMIDataForLogging.msg  AMISeqVariables.msg  AhtAllSequences.msg  AhtDataForLogging.msg  AhtSeqVariables.msg  AhtVariables.msg  DefaultMsg.msg  DistRange.msg  FrequencySet.msg  ImagePointsWithFloatStamped.msg  Int32MultiArrayStamped.msg  Point2DWithFloat.msg  RecMsg.msg  USM.msg  ahtDataForLogging.msg  amiAllSequences.msg  amiSeqVariables.msg  omtaAllSequences.msg  omtaDataForLogging.msg  omtaSeqPoint.msg  omtaSeqVariables.msg
notes/: swarm_camera_params.txt
processing/: CMakeLists.txt  Doxyfile  package.xml  plugins.xml
processing/extrinsics/: oscar_right.xml  papa_right.xml  quebec_left.xml  quebec_right.xml  romeo_right.xml  sierra_left.xml  sierra_right.xml  tango_right.xml  uniform_right.xml  victor_left.xml  victor_right.xml
processing/include/OCamCalib/: ocam_functions.cpp  ocam_functions.h
processing/include/OCamCalib/config/: calib_results_bf_uv_25002510.txt  calib_results_bf_uv_25003653.txt  calib_results_bf_uv_25003655.txt  calib_results_bf_uv_25003671.txt  calib_results_bf_uv_25003696.txt  calib_results_uv_25002510.txt  calib_results_uv_25003650.txt  calib_results_uv_25003668.txt  calib_results_uv_25003689.txt  calib_results_uv_25003696.txt
processing/include/color_selector/: color_selector.cpp  color_selector.h
processing/include/detect/: uvLedDetect_fast.cpp  uvLedDetect_fast.h  uv_led_detect_fast.cpp  uv_led_detect_fast.h
processing/include/frequency_classifier/: frequency_classifier.cpp  frequency_classifier.h
processing/include/ht3dbt/: ht3d.h  ht4d.cpp  ht4d.h
processing/include/ht4dbt/: ht4d.cpp  ht4d.h
processing/include/kalman/: kalman.cpp
processing/include/unscented/: unscented.cpp  unscented.h
processing/launch/: beacon_test.launch  beacon_test_rw.launch  bluefox_basic.launch  boids_reporter.launch  boids_reporter_simulation.launch  demo_uvdar_core.launch  demo_uvdar_kalman.launch  double_bluefox.launch  follow_with_decoy.launch  frequency_setter.launch  generate_masks.launch  just_output.launch  record_calibration.launch  reprocess_all_single.launch  reproject_all_2.launch  reprojector_bag_2.launch  start_dataset_1t.launch  start_dataset_2t.launch  test_rw_one_sided.launch  test_rw_two_sided.launch  test_simulation_follow.launch  test_simulation_observe.launch  test_simulation_observe_two_sided.launch  test_simulation_observe_two_sided_single_id.launch  test_simulation_report.launch  uvdar_anonymous_kalman.launch  uvdar_gazebo.launch  uvdar_kalman_anonymous.launch
processing/launch/dataset/: reprocess.launch  reprocess_all.launch  reprocess_all_single.launch  reproject_all_2.launch  reprojector.launch  reprojector_bag.launch  reprojector_bag_2.launch  reprojector_bag_fisheye.launch
processing/launch/legacy/: follow_single.launch  follow_with_decoy.launch
processing/launch/masks/: generate_masks.launch  generate_masks_local.launch
processing/msg/: DistRangeVector.msg  Int32MultiArrayStamped.msg  ROIVector.msg
processing/rviz/: beacon_testing.rviz  beacon_testing_47.rviz
processing/scripts/: beacon_dataset.sh  beacon_test.sh  beacon_test.yml  position1.txt  position2.txt  position3.txt  record_rois_new.sh  rosbag_record.sh  session_dataset_narrow.yml
processing/scripts/custom_configs/: mpc_tracker.yaml
processing/src/: blink_processor.cpp  bluefox_emulator.cpp  detector.cpp  filter.cpp  filter_anonymous.cpp  follower.cpp  frequency_setter.cpp  mask_generator.cpp  poseReporter.cpp  reprojector.cpp  uav_pose_calculator.cpp
rviz/: beacon_testing.rviz  multi_frequency_testing.rviz  swarm_visualizer.rviz  swarm_visualizer_2.rviz  two_drone_visualization.rviz
rx_flying/: tmux.sh
scripts/: .tmuxinator.yml  beacon_test.yml  blinking_evaluation.sh  blinking_evaluation.yml  bluefox_record.sh  bluefox_record.yml  circle_exp_uav1.csv  circle_exp_uav2.csv  circle_exp_uav3.csv  extract_mask.py  multi_frequency_test.sh  multi_frequency_test.yml  new_signaling.sh  new_signaling.yml  p3.csv  p4.csv  p_2.csv  pose4.csv  position1.csv  position10.csv  position11.csv  position2.csv  position3.csv  position3.txt  position3NearBy.csv  position3SecondCam.csv  position5.csv  position7.csv  position8.csv  prelimintary_desert_data_gathering.sh  program_leds.sh  record.sh  record_calibration.sh  record_detectonly.sh  record_nocovar.sh  record_rois.sh  record_rois_new.sh  record_uvdar_fpga.sh  rosbag_record.sh  run_two_rosbags.sh  (+32 more)
src/: blink_processor.cpp  blink_processor.cpp.orig  (+24 more)
(+390 files in other folders)
