<?xml version="1.0"?>
<package format="2">
  <name>uvdar_core</name>
  <version>0.0.0</version>
  <description>The core UVDAR package</description>

  <maintainer email="viktor.walter@fel.cvut.cz">Viktor Walter</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_modules_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_general</depend>
  <depend>mrs_uav_manager</depend>
  <depend>std_msgs</depend>
<!-- <depend>bluefox2</depend> -->
  <!-- <depend>uvdar_gazebo_plugin</depend> -->

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>

