<?xml version="1.0"?>
<package format="2">
  <name>uvdar_core</name>
  <version>1.0.0</version>
  <description>uvdar_core</description>

  <maintainer email="viktor.walter@fel.cvut.cz">Viktor Walter</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_modules_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>libgbm-dev</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
